feat: Added animation to show card

--- a/css/app.css
+++ b/css/app.css
@@ -65,10 +65,20 @@ h1 {
     box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
 }
 
-.deck .card.open {
-    transform: rotateY(0);
+.deck .card.open {   
+    animation: open 0.3s;     
     background: #02b3e4;
     cursor: default;
+}
+
+@keyframes open {
+    from {
+        transform: rotateY(180deg);
+    }
+
+    to {
+        transform: rotateY(0deg);
+    }
 }
 
 .deck .card.show {
