feat: Animation for matching cards.

--- a/css/app.css
+++ b/css/app.css
@@ -88,7 +88,26 @@ h1 {
 .deck .card.match {
     cursor: default;
     background: #02ccba;
-    font-size: 33px;    
+    font-size: 33px;
+    animation: match 0.8s;
+}
+
+@keyframes match {
+    0%,100%{
+        transform: scale(1);
+    }
+    20% {
+        transform: scale(.7);
+    }
+    40% {
+        transform: scale(.9);
+    }
+    60% {
+        transform: scale(.7);
+    }
+    80% {
+        transform: scale(.9);
+    }
 }
 
 /*
