--- a/css/app.css
+++ b/css/app.css
@@ -66,12 +66,13 @@ h1 {
 }
 
 .deck .card.open {   
-    animation: open 0.3s;     
+    animation: open 0.6s;
     background: #02b3e4;
     cursor: default;
 }
 
 @keyframes open {
+
     from {
         transform: rotateY(180deg);
     }
@@ -79,6 +80,7 @@ h1 {
     to {
         transform: rotateY(0deg);
     }
+
 }
 
 .deck .card.show {
@@ -93,21 +95,54 @@ h1 {
 }
 
 @keyframes match {
+
     0%,100%{
         transform: scale(1);
     }
+
     20% {
         transform: scale(.7);
     }
+
     40% {
         transform: scale(.9);
     }
+
     60% {
         transform: scale(.7);
     }
+
     80% {
         transform: scale(.9);
     }
+
+}
+
+.deck .card.close {
+    background: #2e3d49;
+    animation: close 0.6s;
+}
+
+@keyframes close {
+
+    0% {
+        transform: rotateY(0deg);
+    }
+
+    0%,30% {
+        font-size: 33px;
+        background-color: #F23E01;
+    }
+
+    31%,100% {
+        font-size: 0px;
+        background: #2e3d49;
+    }
+
+    100% {
+        transform: rotateY(180deg);
+    }
+
 }
 
 /*
