--- a/css/app.css
+++ b/css/app.css
@@ -165,7 +165,13 @@ h1 {
 .score-panel .stars li {
     list-style: none;
     display: inline-block;
+    color:  #ffca00fc;
 }
+
+.score-panel .stars .level {
+    color:  initial;
+}
+
 
 .score-panel .restart {
     float: right;
