--- a/css/app.css
+++ b/css/app.css
@@ -48,6 +48,7 @@ h1 {
     justify-content: space-between;
     align-items: center;
     margin: 0 0 3em;
+    background-color: transparent;
 }
 
 .deck .card {
