--- a/css/app.css
+++ b/css/app.css
@@ -22,6 +22,17 @@ body {
     color: #53156d;
 }
 
+@media screen and (max-width: 576px) {
+    .deck {
+        width: 100vw !important;
+        height: 100vw !important;
+    }
+
+    .score-panel {
+        width: 300px !important;
+    }
+}
+
 .container {
     display: flex;
     justify-content: center;
@@ -40,7 +51,7 @@ h1 {
 
 .deck {
     width: 660px;
-    min-height: 680px;
+    height: 660px;
     padding: 32px;
     border-radius: 10px;
     display: flex;
@@ -52,8 +63,8 @@ h1 {
 }
 
 .deck .card {
-    height: 125px;
-    width: 125px;
+    height: calc(22%);
+    width: calc(22%);
     background: #2e3d49;
     font-size: 0;
     color: #ffffff;
