--- a/css/app.css
+++ b/css/app.css
@@ -38,6 +38,8 @@ body {
     align-items: center;
     flex-direction: column;
     background: linear-gradient(0deg,#b6e0e0,#fde6e6,#dfefdb);
+    width: 100%;
+    height: 100%;
 }
 
 h1 {
@@ -191,4 +193,58 @@ h1 {
 
 .score-panel .timer {
 
+}
+
+/*
+*
+* Styles for the Modal
+*
+*/
+
+.modal {
+    visibility: hidden;
+    opacity: 0;
+    display: flex;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 2;
+    background: #ffffff40;
+    -webkit-transition: all 0.5s 0.5s ease-in-out;
+    transition: all 0.5s 0.5s ease-in-out;
+}
+
+.modal-content {
+    text-align: center;
+    padding: 10px;
+    width: 60%;
+    max-width: 500px;
+    min-width: 250px;
+    max-height: 100%;
+    overflow: auto;
+    margin: auto;
+    z-index: 3;
+    opacity: 1;
+    border-radius: 3px;
+    background: #fff;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.modal .close-button {
+    position: relative;
+    z-index: 3;
+    border: 0;
+    background: green;
+    color: white;
+    padding: 5px 10px;
+    font-size: 1.3rem;
+    border-radius: 8px;
+}
+
+.modal-show {
+    opacity: 1;
+    visibility: visible;
 }
