--- a/css/app.css
+++ b/css/app.css
@@ -1,10 +1,12 @@
 html {
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 
 *,
 *::before,
 *::after {
+    -webkit-box-sizing: inherit;
     box-sizing: inherit;
 }
 
@@ -17,7 +19,7 @@ body {
 }
 
 body {
-    font-family: 'Coda', cursive;
+    font-family: Coda, cursive;
     color: #53156d;
 }
 
@@ -33,13 +35,25 @@ body {
 }
 
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background: linear-gradient(0deg,#b6e0e0,#fde6e6,#dfefdb);
     width: 100%;
     height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    background: -webkit-gradient(linear,left bottom, left top,from(#b6e0e0),color-stop(#fde6e6),to(#dfefdb));
+    background: -webkit-linear-gradient(bottom,#b6e0e0,#fde6e6,#dfefdb);
+    background: -o-linear-gradient(bottom,#b6e0e0,#fde6e6,#dfefdb);
+    background: linear-gradient(#b6e0e0,#fde6e6,#dfefdb);
 }
 
 h1 {
@@ -55,44 +69,68 @@ h1 {
     width: 660px;
     height: 660px;
     padding: 32px;
-    border-radius: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -webkit-box-align: center;
     align-items: center;
     margin: 0 0 3em;
     background-color: transparent;
 }
 
 .deck .card {
-    height: calc(22%);
-    width: calc(22%);
+    height: 22%;
+    width: 22%;
     background: #2e3d49;
     font-size: 0;
-    color: #ffffff;
+    color: #fff;
     border-radius: 8px;
     cursor: pointer;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 
-.deck .card.open {   
+.deck .card.open {
+    -webkit-animation: open 0.6s;
     animation: open 0.6s;
     background: #02b3e4;
     cursor: default;
 }
 
-@keyframes open {
-
+@-webkit-keyframes open {
     from {
+        -webkit-transform: rotateY(180deg);
         transform: rotateY(180deg);
     }
 
     to {
-        transform: rotateY(0deg);
+        -webkit-transform: rotateY(0);
+        transform: rotateY(0);
+    }
+}
+
+@keyframes open {
+    from {
+        -webkit-transform: rotateY(180deg);
+        transform: rotateY(180deg);
     }
 
+    to {
+        -webkit-transform: rotateY(0);
+        transform: rotateY(0);
+    }
 }
 
 .deck .card.show {
@@ -103,58 +141,112 @@ h1 {
     cursor: default;
     background: #02ccba;
     font-size: 33px;
+    -webkit-animation: match 0.8s;
     animation: match 0.8s;
 }
 
-@keyframes match {
-
+@-webkit-keyframes match {
     0%,100%{
+        -webkit-transform: scale(1);
         transform: scale(1);
     }
 
     20% {
-        transform: scale(.7);
+        -webkit-transform: scale(0.7);
+        transform: scale(0.7);
     }
 
     40% {
-        transform: scale(.9);
+        -webkit-transform: scale(0.9);
+        transform: scale(0.9);
     }
 
     60% {
-        transform: scale(.7);
+        -webkit-transform: scale(0.7);
+        transform: scale(0.7);
     }
 
     80% {
-        transform: scale(.9);
+        -webkit-transform: scale(0.9);
+        transform: scale(0.9);
+    }
+}
+
+@keyframes match {
+    0%,100%{
+        -webkit-transform: scale(1);
+        transform: scale(1);
     }
 
+    20% {
+        -webkit-transform: scale(0.7);
+        transform: scale(0.7);
+    }
+
+    40% {
+        -webkit-transform: scale(0.9);
+        transform: scale(0.9);
+    }
+
+    60% {
+        -webkit-transform: scale(0.7);
+        transform: scale(0.7);
+    }
+
+    80% {
+        -webkit-transform: scale(0.9);
+        transform: scale(0.9);
+    }
 }
 
 .deck .card.close {
     background: #2e3d49;
+    -webkit-animation: close 0.6s;
     animation: close 0.6s;
 }
 
-@keyframes close {
-
+@-webkit-keyframes close {
     0% {
-        transform: rotateY(0deg);
+        -webkit-transform: rotateY(0);
+        transform: rotateY(0);
     }
 
     0%,30% {
         font-size: 33px;
-        background-color: #F23E01;
+        background-color: #f23e01;
     }
 
     31%,100% {
-        font-size: 0px;
+        font-size: 0;
         background: #2e3d49;
     }
 
     100% {
+        -webkit-transform: rotateY(180deg);
         transform: rotateY(180deg);
     }
+}
 
+@keyframes close {
+    0% {
+        -webkit-transform: rotateY(0);
+        transform: rotateY(0);
+    }
+
+    0%,30% {
+        font-size: 33px;
+        background-color: #f23e01;
+    }
+
+    31%,100% {
+        font-size: 0;
+        background: #2e3d49;
+    }
+
+    100% {
+        -webkit-transform: rotateY(180deg);
+        transform: rotateY(180deg);
+    }
 }
 
 /*
@@ -165,7 +257,11 @@ h1 {
     text-align: left;
     width: 345px;
     margin-bottom: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
 }
 
@@ -179,11 +275,11 @@ h1 {
 .score-panel .stars li {
     list-style: none;
     display: inline-block;
-    color:  initial;    
+    color: initial;
 }
 
 .score-panel .stars .level {
-    color:  #ffca00fc;
+    color: #ffca00;
 }
 
 .score-panel .restart {
@@ -191,19 +287,15 @@ h1 {
     cursor: pointer;
 }
 
-.score-panel .timer {
-
-}
-
 /*
-*
 * Styles for the Modal
-*
 */
 
 .modal {
     visibility: hidden;
     opacity: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     position: fixed;
     top: 0;
@@ -213,32 +305,31 @@ h1 {
     z-index: 1;
     background: rgba(255, 255, 255, 0.25);
     -webkit-transition: all 0.5s 0.5s ease-in-out;
+    -o-transition: all 0.5s 0.5s ease-in-out;
     transition: all 0.5s 0.5s ease-in-out;
 }
 
 .modal-content {
+    opacity: 0;
+    visibility: hidden;
     text-align: center;
     padding: 10px;
     width: 60%;
     max-width: 500px;
     min-width: 250px;
     max-height: 100%;
-    overflow: auto;
     margin: auto;
     z-index: 2;
-    opacity: 1;
-    border-radius: 3px;
+    border-radius: 8px;
     background: #fff;
-    opacity: 0;
-    visibility: hidden;
 }
 
 .modal .close-button {
     position: relative;
     z-index: 2;
     border: 0;
-    background: green;
-    color: white;
+    background: #080;
+    color: #fff;
     padding: 5px 10px;
     font-size: 1.3rem;
     border-radius: 8px;
