--- a/css/app.css
+++ b/css/app.css
@@ -50,9 +50,9 @@ body {
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
-    background: -webkit-gradient(linear,left bottom, left top,from(#b6e0e0),color-stop(#fde6e6),to(#dfefdb));
-    background: -webkit-linear-gradient(bottom,#b6e0e0,#fde6e6,#dfefdb);
-    background: -o-linear-gradient(bottom,#b6e0e0,#fde6e6,#dfefdb);
+    background: -webkit-gradient(linear,left top, left bottom,from(#b6e0e0),color-stop(#fde6e6),to(#dfefdb));
+    background: -webkit-linear-gradient(#b6e0e0,#fde6e6,#dfefdb);
+    background: -o-linear-gradient(#b6e0e0,#fde6e6,#dfefdb);
     background: linear-gradient(#b6e0e0,#fde6e6,#dfefdb);
 }
 
@@ -78,6 +78,7 @@ h1 {
     -ms-flex-pack: justify;
     justify-content: space-between;
     -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     margin: 0 0 3em;
     background-color: transparent;
@@ -254,6 +255,7 @@ h1 {
  */
 
 .score-panel {
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     text-align: left;
     width: 345px;
@@ -269,6 +271,8 @@ h1 {
 }
 
 .score-panel .score-values {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     width: 100%;
     -webkit-box-pack: justify;
