fix: Altered display of the  score pane.

--- a/css/app.css
+++ b/css/app.css
@@ -261,7 +261,7 @@ h1 {
     width: 345px;
     display: -webkit-box;
     display: -ms-flexbox;
-    display: flex;
+    display: block;
 }
 
 .score-panel .score-title {
