--- a/css/app.css
+++ b/css/app.css
@@ -259,30 +259,58 @@ h1 {
     width: 345px;
     display: -webkit-box;
     display: -ms-flexbox;
-    display: block;
+    display: table;
+    align-content: center;
 }
 
 .score-panel .score-title {
-    width: 100%;
-    text-align: center;
+    width: 30%;
+    text-align: left;
     margin: 0;
+    display: table-column;
+    float: left;
+    line-height: 1rem;
 }
 
 .score-panel .score-values {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    width: 100%;
+    width: 70%;
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
+    float: right;
 }
 
 .score-panel .stars {
     margin: 0;
     padding: 0;
-    display: inline-block;
+    display: block;
     margin: 0 5px 0 0;
+}
+
+.score-panel .score-stars {
+    width: 100px;
+    text-align: center;
+    justify-content: space-between;
+    display: table-cell;
+}
+
+.score-panel .score-timer {
+    width: 60px;
+    justify-content: center;
+    text-align: center;
+    display: block;
+}
+
+.score-panel .time {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    float: left;
+}
+
+.score-panel .timer {
+    display: block;
 }
 
 .score-panel .stars li {
@@ -296,8 +324,10 @@ h1 {
 }
 
 .score-panel .restart {
-    float: right;
     cursor: pointer;
+    font-size: 1.5rem;
+    display: table-cell;
+    align-self: center;
 }
 
 /*
