--- a/css/app.css
+++ b/css/app.css
@@ -34,6 +34,15 @@ body {
     }
 }
 
+/*
+*retira realce ao selecionar um cartão ou reiniciar jogo
+*no IOS
+*/
+.deck,
+.restart {
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
 .container {
     display: -webkit-box;
     display: -ms-flexbox;
