--- a/css/app.css
+++ b/css/app.css
@@ -23,20 +23,26 @@ body {
     color: #53156d;
 }
 
-@media screen and (max-width: 576px) {
-    .deck {
+@media screen and (max-width: 756px) {
+    .board {
         width: 100vw !important;
         height: 100vw !important;
     }
 
+    .deck    {
+        width: 100% !important;
+        height: 100% !important;
+    }
+}
+
+@media screen and (max-width: 576px) {
     .score-panel {
-        width: 300px !important;
+        width: 80% !important;
     }
 }
 
 /*
-*retira realce ao selecionar um cartão ou reiniciar jogo
-*no IOS
+* IOS - retira realce ao selecionar um cartão ou reiniciar jogo
 */
 .deck,
 .restart {
@@ -69,13 +75,52 @@ h1 {
 }
 
 /*
+ * Styles for the board and captions
+ */
+
+.board {
+    width: 700px;
+    height: 700px;
+    padding: 32px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    margin: 0 0 3em;
+    background-color: transparent;
+}
+
+.caption-col {
+    width: 110px;
+    height: 2rem;
+    min-height: 1rem;
+    display: inline;
+}
+
+.caption-row {
+    position: absolute;
+    width: 1rem;
+    height: 150px;
+    display: block;
+    margin: 0;
+    text-align: center;
+}
+
+/*
  * Styles for the deck of cards
  */
 
 .deck {
+    padding-left: 20px;
     width: 660px;
     height: 660px;
-    padding: 32px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -143,6 +188,11 @@ h1 {
 
 .deck .card.show {
     font-size: 33px;
+}
+
+.deck .card.select {
+    transition: 0.5s;
+    background: #bae0e0
 }
 
 .deck .card.match {
