--- a/css/app.css
+++ b/css/app.css
@@ -191,6 +191,8 @@ h1 {
 }
 
 .deck .card.select {
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
     transition: 0.5s;
     background: #bae0e0
 }
@@ -319,6 +321,7 @@ h1 {
     display: -webkit-box;
     display: -ms-flexbox;
     display: table;
+    -ms-flex-line-pack: center;
     align-content: center;
 }
 
@@ -332,6 +335,8 @@ h1 {
 }
 
 .score-panel .score-values {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     width: 70%;
     -webkit-box-pack: justify;
@@ -350,12 +355,16 @@ h1 {
 .score-panel .score-stars {
     width: 100px;
     text-align: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
     display: table-cell;
 }
 
 .score-panel .score-timer {
     width: 60px;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     text-align: center;
     display: block;
@@ -364,6 +373,8 @@ h1 {
 .score-panel .time {
     margin: 0;
     padding: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     float: left;
 }
@@ -375,12 +386,16 @@ h1 {
 .score-panel .score-stars {
     width: 100px;
     text-align: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
     display: table-cell;
 }
 
 .score-panel .score-timer {
     width: 60px;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     text-align: center;
     display: block;
@@ -389,6 +404,8 @@ h1 {
 .score-panel .time {
     margin: 0;
     padding: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     float: left;
 }
@@ -411,6 +428,8 @@ h1 {
     cursor: pointer;
     font-size: 1.5rem;
     display: table-cell;
+    -ms-flex-item-align: center;
+    -ms-grid-row-align: center;
     align-self: center;
 }
 
